# rig_bits

./: README.md
Application/: settings.gradle.kts
Application/app/: build.gradle.kts
Application/app/src/androidTest/java/com/example/rig_bits/: ExampleInstrumentedTest.kt
Application/app/src/main/: AndroidManifest.xml
Application/app/src/main/cpp/: CMakeLists.txt  ISimTelemetry.hpp  native-lib.cpp
Application/app/src/main/java/com/example/rig_bits/: MainActivity.kt
Application/app/src/main/res/values/: strings.xml  themes.xml
Application/app/src/main/res/values-night/: themes.xml
Application/app/src/test/java/com/example/rig_bits/: ExampleUnitTest.kt
Application/gradle/wrapper/: gradle-wrapper.properties
Application/telemetry_readers/: CMakeLists.txt
Application/telemetry_readers/common/: ISimTelemetry.hpp
Application/telemetry_readers/forza_7/: TelemetryForza7.cpp  TelemetryForza7.hpp
